--- a/build.gradle
+++ b/build.gradle
@@ -2,18 +2,40 @@ buildscript {
     repositories {
         mavenCentral()
         maven {
-            name = "forge"
-            url = "http://files.minecraftforge.net/maven"
-        }
+            name = "gt"
+            url = "https://gregtech.overminddl1.com/"
+        }   
         maven {
             name = "sonatype"
             url = "https://oss.sonatype.org/content/repositories/snapshots/"
         }
+        maven {
+            url = "https://plugins.gradle.org/m2/"
+        }
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT'
+        classpath "net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT"
+        classpath "gradle.plugin.se.bjurr.gitchangelog:git-changelog-gradle-plugin:1.55"
+
     }
 }
+
+apply plugin: 'eclipse'
+eclipse {
+    classpath {
+        downloadJavadoc = true
+        downloadSources = true
+    }
+}
+
+apply plugin: 'idea'
+idea{
+    module {
+        downloadJavadoc = true
+        downloadSources = true
+    }
+}
+
 apply plugin: 'java'
 apply plugin: 'forge'
 //apply plugin: 'idea'
@@ -32,7 +54,7 @@ targetCompatibility = 1.8
 
 compileJava.options.encoding = 'UTF-8'
 
-version = "1.0.1-universal"
+version = "1.0.2-universal"
 group= "com.detrav.detravscannermod" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "DetravScannerMod-GWPP-Edition-1.7.10"
 
