--- a/build.gradle
+++ b/build.gradle
@@ -2,40 +2,18 @@ buildscript {
     repositories {
         mavenCentral()
         maven {
-            name = "gt"
-            url = "https://gregtech.overminddl1.com/"
-        }   
+            name = "forge"
+            url = "http://files.minecraftforge.net/maven"
+        }
         maven {
             name = "sonatype"
             url = "https://oss.sonatype.org/content/repositories/snapshots/"
         }
-        maven {
-            url = "https://plugins.gradle.org/m2/"
-        }
     }
     dependencies {
-        classpath "net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT"
-        classpath "gradle.plugin.se.bjurr.gitchangelog:git-changelog-gradle-plugin:1.55"
-
+        classpath 'net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT'
     }
 }
-
-apply plugin: 'eclipse'
-eclipse {
-    classpath {
-        downloadJavadoc = true
-        downloadSources = true
-    }
-}
-
-apply plugin: 'idea'
-idea{
-    module {
-        downloadJavadoc = true
-        downloadSources = true
-    }
-}
-
 apply plugin: 'java'
 apply plugin: 'forge'
 //apply plugin: 'idea'
@@ -47,6 +25,7 @@ file "build.properties" withReader {
     prop.load(it)
     ext.config = new ConfigSlurper().parse prop
 }
+
 sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
 sourceCompatibility = 1.8
@@ -54,9 +33,9 @@ targetCompatibility = 1.8
 
 compileJava.options.encoding = 'UTF-8'
 
-version = "1.0.2-universal"
+version = "${config.detravscanner.version}"
 group= "com.detrav.detravscannermod" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "DetravScannerMod-GWPP-Edition-1.7.10"
+archivesBaseName = "GT Scanner Mod"
 
 minecraft {
     version = "${config.minecraft.version}-${config.forge.version}"
@@ -149,14 +128,8 @@ task copyResources(type: Copy,dependsOn: compileDebugJar){
 	from sourceSets.main.resources
 	into "$buildDir/debugjarCompiled"
 }
-
-task debugJar(type: Jar, dependsOn: copyResources) {
-    from "$buildDir/debugjarCompiled"
-    classifier = 'dev-debug'
-}
 artifacts {
     archives devJar
-    archives debugJar
 }
 processResources
 {
@@ -195,5 +168,3 @@ processResources
 
     }
 }
-
-    
